Finished project, everyting works
TODO: CODE CLEANUP
