# service/api/api-handler.go
@@ -31,6 +31,8 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.DELETE("/users/:username/posts/:postId/comments/:commentId", rt.uncommentPhoto) // DONE
 	rt.router.DELETE("/users/:username/posts/:postId/likes", rt.unlikePhoto)                  // DONE
 	rt.router.GET("/users/:username/posts/:postId/likes", rt.checkUserLike)                   // DONE
+	rt.router.GET("/users/:username/followers", rt.getFollowers)                              // DONE
+	rt.router.GET("/users/:username/following", rt.getFollowing)                              // DONE
 	rt.router.GET("/utils/follows", rt.getFollows)                                            // DONE
 	rt.router.GET("/utils/usernames", rt.searchUserById)                                      // DONE
 	rt.router.GET("/images/:imageId", rt.getImage)                                            // DONE
